--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,20 @@
 {
   "C_Cpp.intelliSenseEngine": "Tag Parser",
-  "idf.port": "/dev/cu.Bluetooth-Incoming-Port",
+  "idf.port": "/dev/cu.SLAB_USBtoUART",
   "files.associations": {
+    "*.cjson": "jsonc",
+    "*.wxss": "css",
+    "*.wxs": "javascript",
     "engine.h": "c",
     "jerryscript-port.h": "c",
-    "freertos.h": "c"
-  }
+    "freertos.h": "c",
+    "task.h": "c",
+    "uart.h": "c",
+    "handler.h": "c"
+  },
+  "idf.adapterTargetName": "esp32",
+  "idf.openOcdConfigs": [
+    "interface/ftdi/esp32_devkitj_v1.cfg",
+    "target/esp32.cfg"
+  ]
 }
